@@ -15,9 +15,7 @@
 # You should have received a copy of the GNU General Public License
 # along with Olena.  If not, see <http://www.gnu.org/licenses/>.
 
-
-# Find Scribo headers.
-AM_CPPFLAGS = -I$(top_srcdir)/scribo
+include $(top_srcdir)/scribo/common.mk
 
 DOXYGEN = doxygen
 
